--- a/plugins/sync/src/main/res/values-tr-rTR/strings.xml
+++ b/plugins/sync/src/main/res/values-tr-rTR/strings.xml
@@ -30,7 +30,7 @@
     <string name="ns_client_short_name">NSCl</string>
     <string name="ns_client_url">URL:</string>
     <string name="restart">Yeniden başlat</string>
-    <string name="ns_client_internal_title">NSClient</string>
+    <string name="ns_client_title">NSClient</string>
     <string name="ns_client_url_title">Nightscout URL</string>
     <string name="ns_client_url_dialog_message">Nightscout URL adresinizi girin</string>
     <string name="ns_client_secret_title">Nightscout API Anahtarı</string>
