--- a/plugins/sync/src/main/res/values-es-rES/strings.xml
+++ b/plugins/sync/src/main/res/values-es-rES/strings.xml
@@ -30,7 +30,7 @@
     <string name="ns_client_short_name">NSCLI</string>
     <string name="ns_client_url">URL:</string>
     <string name="restart">Reiniciar</string>
-    <string name="ns_client_internal_title">NSClient</string>
+    <string name="ns_client_title">NSClient</string>
     <string name="ns_client_url_title">URL de Nightscout</string>
     <string name="ns_client_url_dialog_message">Introduce tu página de Nightscout</string>
     <string name="ns_client_secret_title">API Secret de Nightscout</string>
