--- a/plugins/sync/src/main/res/values-pl-rPL/strings.xml
+++ b/plugins/sync/src/main/res/values-pl-rPL/strings.xml
@@ -30,7 +30,7 @@
     <string name="ns_client_short_name">NSCI</string>
     <string name="ns_client_url">URL:</string>
     <string name="restart">Restart</string>
-    <string name="ns_client_internal_title">NSClient</string>
+    <string name="ns_client_title">NSClient</string>
     <string name="ns_client_url_title">Nightscout URL</string>
     <string name="ns_client_url_dialog_message">Wprowadź URL Nightscout</string>
     <string name="ns_client_secret_title">NS API secret</string>
