--- a/plugins/sync/src/main/res/values-sv-rSE/strings.xml
+++ b/plugins/sync/src/main/res/values-sv-rSE/strings.xml
@@ -29,7 +29,7 @@
     <string name="ns_client_short_name">NSCl</string>
     <string name="ns_client_url">URL:</string>
     <string name="restart">Starta om</string>
-    <string name="ns_client_internal_title">NSClient</string>
+    <string name="ns_client_title">NSClient</string>
     <string name="ns_client_url_title">Nightscout-URL</string>
     <string name="ns_client_url_dialog_message">Ange Nightscout-URL</string>
     <string name="ns_client_secret_title">Nightscout API secret</string>
