--- a/plugins/sync/src/main/res/values/strings.xml
+++ b/plugins/sync/src/main/res/values/strings.xml
@@ -41,13 +41,13 @@
     <!-- NSClient -->
     <string name="key_ns_paused" translatable="false">ns_client_paused</string>
     <string name="no_write_permission">NSCLIENT has no write permission. Wrong API secret?</string>
-    <string name="ns_client_v3_short_name">NSV3</string>
+    <string name="ns_client_v3_short_name">NSv3</string>
     <string name="ns_client">NSClient</string>
-    <string name="ns_client_short_name">NSV1</string>
+    <string name="ns_client_short_name">NSv1</string>
     <string name="ns_client_url">URL:</string>
     <string name="restart">Restart</string>
-    <string name="ns_client_internal_title">NSClientV1</string>
-    <string name="ns_client_v3_internal_title">NSClientV3</string>
+    <string name="ns_client_title">NSClientV1</string>
+    <string name="ns_client_v3_title">NSClientV3</string>
     <string name="ns_client_url_title">Nightscout URL</string>
     <string name="ns_client_url_dialog_message">Enter your Nightscout URL (i.e. https://yoursitename.yourplatform.dom)</string>
     <string name="ns_client_secret_title">Nightscout API secret</string>
