--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -432,6 +432,9 @@
     <string name="basalpct">Basal %</string>
     <string name="sensitivity">Sensitivity</string>
     <string name="isf_for_carbs">ISF for carbs absorption: %1$.1f</string>
+    <string name="autosens_long">Autosens Value: %.0f%%</string>
+    <string name="autosens_short">AS: %.0f%%</string>
+    <string name="algorithm_long">Autosens in Loop: %.0f%%</string>
     <string name="a11y_file">file</string>
     <string name="a11y_user">user</string>
 
