--- a/core/interfaces/src/main/res/values/strings.xml
+++ b/core/interfaces/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="pref_show_ago">Show Ago</string>
     <string name="pref_show_week_number">Show Week number</string>
     <string name="pref_show_date">Show Date</string>
+    <string name="pref_show_seconds">Show Seconds</string>
     <string name="default_custom_watchface_comment">Default watchface, you can click on EXPORT WATCHFACE button to generate a template</string>
     <string name="default_custom_watchface_external_comment">Default watchface including external views for followers, you can click on EXPORT WATCHFACE button to generate a template</string>
     <string name="wear_default_watchface">Default Watchface</string>
