Improve strings for tizen plugin

--- a/plugins/sync/src/main/res/values/strings.xml
+++ b/plugins/sync/src/main/res/values/strings.xml
@@ -141,9 +141,9 @@
     <string name="xdrip_local_broadcasts_title">Enable broadcasts to xDrip+.</string>
 
     <!--    DataBroadcast-->
-    <string name="tizen">Samsung Tizen</string>
-    <string name="tizen_short">TIZ</string>
-    <string name="tizen_description">Broadcast data to Samsung\'s G-Watch Wear App (Tizen OS)</string>
+    <string name="tizen">Companion App Broadcast</string>
+    <string name="tizen_short">CAB</string>
+    <string name="tizen_description">Enables data broadcasting to companion apps on Samsung Tizen OS, Wear OS, and Android Auto devices, including G-Watch, G-Watch Wear, GlucoDataHandler, and GlucoDataAuto.</string>
 
     <!-- GarminPlugin -->
     <string name="garmin">Garmin</string>
