--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -281,4 +281,8 @@
     <string name="complication_iob_icon">IoB Icon</string>
     <string name="complication_iob_detailed">IoB Detailed</string>
     <string name="complication_uploader_phone_battery">Uploader/Phone Battery</string>
+    <string name="status_loop_state">Loop state</string>
+    <string name="key_loop_states_data" translatable="false">loop_states</string>
+    <string name="label_loop_state_title">AAPS(Loop state)</string>
+    <string name="action_loop_state_selected">Loop state requested</string>
 </resources>
