--- a/plugins/insulin/src/main/res/values/strings.xml
+++ b/plugins/insulin/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Insulin -->
-    <string name="lyumjev">Lyumjev</string>
     <string name="description_insulin_rapid">Insulin preset for Humalog and NovoRapid / NovoLog</string>
     <string name="description_insulin_ultra_rapid">Insulin preset for Fiasp</string>
     <string name="description_insulin_lyumjev">Insulin preset for Lyumjev</string>
@@ -12,9 +11,6 @@
     <string name="insulin_oref_peak">IOB Curve Peak Time</string>
     <string name="insulin_peak_time">Peak Time [min]</string>
     <string name="update_profiles">Update Profiles</string>
-    <string name="free_peak_oref">Free-Peak Oref</string>
-    <string name="rapid_acting_oref">Rapid-Acting Oref</string>
-    <string name="ultra_rapid_oref">Ultra-Rapid Oref</string>
     <string name="dia_too_short">DIA of %1$f too short - using %2$f instead!</string>
     <string name="fast_acting_insulin_comment">Novorapid, Novolog, Humalog</string>
     <string name="ultra_fast_acting_insulin_comment">Fiasp</string>
@@ -22,6 +18,8 @@
     <string name="insulin_name_exists">Insulin Name %1$s already exists, select a new name</string>
     <string name="insulin_duplicated">Insulin already exists with name: %1$s</string>
     <string name="do_you_want_switch_insulin">Do you want to switch insulin and discard changes made to current insulin?</string>
-
+    <string name="a11y_add_new_insulin">Add new insulin</string>
+    <string name="a11y_delete_current_insulin">Delete current insulin</string>
+    <string name="save_or_reset_changes_first">Save or reset current changes first</string>
 
 </resources>
