--- a/plugins/automation/src/main/res/values/strings.xml
+++ b/plugins/automation/src/main/res/values/strings.xml
@@ -146,11 +146,11 @@
     <string name="autoisf_enabled">AutoISF has been enabled</string>
     <string name="autoisf_alreadydisabled">AutoISF already disabled</string>
     <string name="autoisf_disabled">AutoISF has been disabled</string>
-    <string name="key_enable_autoISF" translatable="false">openapsama_enable_autoISF</string>
+    <string name="enable_autoISF" translatable="false">openapsama_enable_autoISF</string>
     <string name="weight_new">new value</string>
     <string name="weight_old">as before</string>
-    <string name="key_bgAccel_ISF_weight" translatable="false">bgAccel_ISF_weight</string>
-    <string name="key_iobTH_percent" translatable="false">iob_threshold_percent</string>
+    <string name="bgAccel_ISF_weight" translatable="false">bgAccel_ISF_weight</string>
+    <string name="iob_threshold_percent" translatable="false">iob_threshold_percent</string>
     <string name="automate_set_acce_weight">Set bgAccel_ISF_weight to %1$.2f</string>
     <string name="automate_set_iobTH_percent">Set iobTH to %1$d%%</string>
     <string name="autoisf_acce_weight">BgAccel weight</string>
