--- a/plugins/sync/src/main/res/values/strings.xml
+++ b/plugins/sync/src/main/res/values/strings.xml
@@ -166,9 +166,9 @@
     <string name="wear_action_tempt_zero_message">Zero-Temp-Target - cancelling running Temp-Targets?</string>
     <string name="wear_action_tempt_min_bg_error">Min-BG out of range!</string>
     <string name="wear_action_tempt_max_bg_error">Max-BG out of range!</string>
-    <string name="wear_action_tempt_manual_range_message">Temptarget:\nMin: %1$s\nMax: %2$s\nDuration: %3$s</string>
-    <string name="wear_action_tempt_manual_message">Temptarget:\nTarget: %1$s\nDuration: %2$s</string>
-    <string name="wear_action_tempt_preset_message">Temptarget:\nReason: %1$s\nTarget: %2$s\nDuration: %3$s</string>
+    <string name="wear_action_tempt_manual_range_message">Temporary Target\n\nMin: %1$s\nMax: %2$s\nDuration: %3$s min</string>
+    <string name="wear_action_tempt_manual_message">Temporary Target\n\nTarget: %1$s\nDuration: %2$s min</string>
+    <string name="wear_action_tempt_preset_message">Temporary Target\n\nReason: %1$s\nTarget: %2$.1f\nDuration: %3$s min</string>
     <string name="no_success">not successful - please check phone</string>
     <string name="wear_settings">Wear settings</string>
     <string name="wearcontrol_title">Controls from Watch</string>
