apex: fix TBR and add pump icon to the fragmentFix TBR and add pump icon to the fragment

--- a/pump/apex/src/main/res/values/strings.xml
+++ b/pump/apex/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="status_label">Pump status</string>
     <string name="getting_pump_status">GET STATUS</string>
     <string name="getting_boluses">GET BOLUS</string>
+    <string name="suspend">Suspend</string>
 </resources>
