finished first round of functionality

--- a/plugins/automation/src/main/res/values/strings.xml
+++ b/plugins/automation/src/main/res/values/strings.xml
@@ -156,5 +156,19 @@
     <string name="set_state_state_val">"State value: "</string>
     <string name="check_state_name">Check automation state</string>
     <string name="check_state_description">Check automation state %1$s=%2$s</string>
+    <string name="no_automation_states">No automation states defined yet. Use the \"Set automation state\" action in your automation rules to create states.</string>
 
+    <!-- Automation States Plugin -->
+    <string name="automation_states">Automation States</string>
+    <string name="automation_states_short">States</string>
+    <string name="description_automation_states">View and monitor automation state variables</string>
+    <string name="automation_state_values">Automation State Values</string>
+    <string name="enter_state_value">Enter state value</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="add_automation_state">Add Automation State</string>
+    <string name="select_state_name">Select state name</string>
+    <string name="select_state_value">Select state value</string>
+    <string name="state_name_label">State name</string>
+    <string name="state_value_label">State value</string>
 </resources>
