--- a/plugins/automation-state/src/main/res/values/strings.xml
+++ b/plugins/automation-state/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="select_state_value">Select state value</string>
     <string name="state_name_label">State name</string>
     <string name="state_value_label">State value</string>
+    <string name="automation_state_last_value_cannot_be_deleted">Cannot delete the last state value</string>
+    <string name="delete_state">Delete State</string>
+    <string name="delete_state_confirmation">Are you sure you want to delete this state?</string>
 </resources> 
